Fix alignment of tags on the listing page

--- a/app/assets/stylesheets/layout/lists/types/tags.css
+++ b/app/assets/stylesheets/layout/lists/types/tags.css
@@ -1,5 +1,10 @@
 ul.horizontal.tag-list {
   overflow: visible;
+  display: block;
+}
+
+li.tag.virtual {
+  opacity: 0;
 }
 
 li.genre {
